# checkers-rl

./: .gitignore  A2CStrategy.cpp  A2CStrategy.h  CMakeLists.txt  CheckerMCST.h  CheckpointMinMax.trpt  Env.cpp  Env.h  GameLoop.cpp  GameLoop.h  GameState.cpp  GameState.h  GameState.i  GameState_wrap.cxx  MCST.h  MCSTStrategy.h  MinMaxStrategy.cpp  MinMaxStrategy.h  NNStrategy.cpp  NNStrategy.h  QNNStrategy.cpp  QNNStrategy.h  README.md  RandomStrategy.h  Strategy.h  StrategyFactory.cpp  StrategyFactory.h  a2c.py  a2c_many.trpt  a2c_rand_minmax.trpt  a2c_round_2.trpt  checkers.py  checkers_swig.py  env_pool.py  pdn_parser.py  pytorch_DQN.py  test_a2c.py  test_a2c_against.py  test_mcst.py  test_min_max.py  (+6 more)
CheckersUI/: .gitignore
CheckersUI/Checkers/: Checkers.sln
CheckersUI/Checkers/Checkers/: Board.cpp  Board.h  Checkers.rc  Checkers.vcxproj  Checkers.vcxproj.filters  CheckersEngine.cpp  CheckersEngine.h  Field.h  FieldDrawer.cpp  FieldDrawer.h  FieldWindow.cpp  FieldWindow.h  Main.cpp  MainWindow.cpp  MainWindow.h  Utils.cpp  Utils.h  resource.h
